[package]
name = "HeadHunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.6", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.11.1", features = [] }
log = { version = "0.4.20" }
clap = { version = "4.5.0", features = ["derive"] }
